<resources>
    <string name="app_name">Filmes Famosos</string>

    <string name="service_error">Error on load Movies</string>
    <string name="resume">Resume</string>
    <string name="rating">Rating:</string>
    <string name="refresh">Refresh</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rating">Top Rating</string>
    <string name="poster_image">Poster Image</string>
    <string name="video_image">Video Image</string>
    <string name="star">Star</string>
    <string name="favorites">Favorites</string>
    <string name="no_internet">There is no internet connection.</string>
    <string name="all_movies_load">All the films were loaded.</string>
    <string name="trailer">Trailer</string>
    <string name="review">Review</string>
</resources>
