<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_most_popular"
        android:orderInCategory="2"
        android:title="@string/most_popular"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_top_rating"
        android:orderInCategory="3"
        android:title="@string/top_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="3"
        android:title="@string/favorites"
        app:showAsAction="never" />
</menu>