<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/defaultMargin"
            tools:context="com.example.filmesfamosos.view.activities.MovieDetailsActivity">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mediumMargin">

                    <ImageView
                        android:id="@+id/iv_Poster"
                        android:layout_width="200dp"
                        android:layout_height="250dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:contentDescription="@string/poster_image" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/iv_Poster"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/defaultMargin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/defaultTextSize"
                        tools:text="(2004)" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:contentDescription="@string/star"
                        android:src="@drawable/ic_star" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginStart="@dimen/defaultMargin"
                        android:layout_marginTop="@dimen/defaultMargin"
                        android:text="@string/rating"
                        android:textColor="@color/black"
                        android:textSize="@dimen/titleTextSize" />

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultMargin"
                        android:layout_marginStart="@dimen/defaultMargin"
                        android:layout_marginTop="@dimen/defaultMargin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/titleTextSize"
                        tools:text="4,8" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/resume"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_resume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/defaultTextSize"
                    tools:text="Title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:background="@color/black" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/defaultMargin"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/trailer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/defaultMargin"
                    android:layout_marginLeft="@dimen/defaultMargin"
                    android:layout_marginStart="@dimen/defaultMargin"
                    android:layout_marginTop="@dimen/defaultMargin"
                    android:text="@string/review"
                    android:textColor="@color/black"
                    android:textSize="@dimen/titleTextSize"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_Review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <FrameLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/loadBackgroundColor"
            android:clickable="false"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="@dimen/progressSize"
                android:layout_height="@dimen/progressSize"
                android:layout_gravity="center" />
        </FrameLayout>
    </FrameLayout>
</layout>
